package ComputeVAT;

public class Main {
    final static int PRCVAT = 25;
    final static String MSG = "MOMS";
    final static String CURRENCY = "Kr";

    public static void main(String[] args) {
        Controller controller = new Controller();
        controller.runController();

    }
}
